--- a/WhipperSnapper/app/src/main/res/layout/activity_main.xml
+++ b/WhipperSnapper/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,22 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@color/primary_color"
+    tools:context=".MainActivity">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/WhipperSnapper"
+        android:id="@+id/tvAppTitle"
+        android:layout_gravity="center_horizontal"
+        android:textSize="44sp"
+        android:textColor="@color/text_on_primary_color"
+        android:layout_alignParentTop="true"
+        android:layout_margin="@dimen/title_button_margin"
+        android:layout_centerHorizontal="true" />
 
     <ProgressBar
         style="?android:attr/progressBarStyleLarge"
