--- a/WhipperSnapper/app/src/main/res/layout/activity_chat.xml
+++ b/WhipperSnapper/app/src/main/res/layout/activity_chat.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.al.whippersnapper.activities.ChatActivity">
+    tools:context="com.al.whippersnapper.activities.ChatActivity"
+    android:background="@color/primary_color">
 
     <LinearLayout
         android:orientation="horizontal"
