--- a/WhipperSnapper/app/src/main/res/layout/activity_waiting_for_chat.xml
+++ b/WhipperSnapper/app/src/main/res/layout/activity_waiting_for_chat.xml
@@ -6,7 +6,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     tools:context="com.al.whippersnapper.activities.WaitingForChatActivity"
-    android:id="@+id/layout">
+    android:id="@+id/layout"
+    android:background="@color/primary_color">
 
     <TextView
         android:layout_width="wrap_content"
