--- a/WhipperSnapper/app/src/main/res/layout/fragment_create_task_details.xml
+++ b/WhipperSnapper/app/src/main/res/layout/fragment_create_task_details.xml
@@ -18,7 +18,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:textColor="@color/text_icons" />
+        android:textColor="@color/light_primary_color" />
 
     <Spinner
         android:layout_width="wrap_content"
@@ -37,7 +37,7 @@
         android:layout_below="@+id/spTaskType"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:textColor="@color/text_icons" />
+        android:textColor="@color/light_primary_color" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -51,7 +51,8 @@
         android:layout_alignRight="@+id/spTaskType"
         android:layout_alignEnd="@+id/spTaskType"
         android:hint="@string/Task_details_hint"
-        android:background="@color/text_field_background" />
+        android:background="@color/primary_color"
+        android:textColorHint="@color/light_primary_color" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -61,7 +62,7 @@
         android:layout_below="@+id/etTaskDetails"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:textColor="@color/text_icons" />
+        android:textColor="@color/light_primary_color" />
 
     <ImageView
         android:layout_width="@dimen/task_photo_size"
@@ -69,7 +70,7 @@
         android:id="@+id/ivTaskPhoto"
         android:layout_below="@+id/tvTakeTaskPhotoLabel"
         android:layout_centerHorizontal="true"
-        android:src="@mipmap/ic_add_task_photo" />
+        android:src="@raw/add_task_photo_white" />
 
     <Button
         android:layout_width="wrap_content"
@@ -81,7 +82,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:background="@color/accent_color" />
+        android:background="@color/accent_color"
+        android:textColor="@color/text_on_primary_color" />
 
     <ProgressBar
         style="?android:attr/progressBarStyleLarge"
