--- a/WhipperSnapper/app/src/main/res/layout/fragment_create_task_location.xml
+++ b/WhipperSnapper/app/src/main/res/layout/fragment_create_task_location.xml
@@ -6,7 +6,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.al.whippersnapper.fragments.CreateTaskLocationFragment">
+    tools:context="com.al.whippersnapper.fragments.CreateTaskLocationFragment"
+    android:background="@color/primary_color">
 
 
     <TextView
@@ -64,7 +65,9 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignRight="@+id/map"
-        android:layout_alignEnd="@+id/map" />
+        android:layout_alignEnd="@+id/map"
+        android:background="@color/accent_color"
+        android:textColor="@color/light_primary_color" />
 
     <ProgressBar
         style="?android:attr/progressBarStyleLarge"
