--- a/WhipperSnapper/app/src/main/res/layout/item_chat.xml
+++ b/WhipperSnapper/app/src/main/res/layout/item_chat.xml
@@ -9,7 +9,7 @@
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:scaleType="fitCenter"
-        android:src="@mipmap/ic_launcher"
+        android:src="@mipmap/ic_personal_photo"
         android:layout_gravity="top" />
     <TextView
         android:textSize="18sp"
@@ -32,6 +32,6 @@
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:scaleType="fitCenter"
-        android:src="@mipmap/ic_launcher"
+        android:src="@mipmap/ic_personal_photo"
         android:layout_gravity="top" />
 </LinearLayout>
