Adding icons for the tab strip. Changing the Create Task to polish the UI.

--- a/WhipperSnapper/app/src/main/res/layout/activity_find_task.xml
+++ b/WhipperSnapper/app/src/main/res/layout/activity_find_task.xml
@@ -8,8 +8,12 @@
 
     <com.astuetz.PagerSlidingTabStrip
         android:id="@+id/tabsFindTask"
+        android:background="@color/accent_color"
         app:pstsShouldExpand="true"
         app:pstsTextAllCaps="true"
+        app:pstsDividerColor="@color/text_field_background"
+        app:pstsIndicatorColor="@color/text_field_background"
+        app:pstsUnderlineColor="@color/text_field_background"
         android:layout_width="match_parent"
         android:layout_height="48dp"></com.astuetz.PagerSlidingTabStrip>
 
