--- a/WhipperSnapper/app/src/main/res/layout/fragment_create_task_details.xml
+++ b/WhipperSnapper/app/src/main/res/layout/fragment_create_task_details.xml
@@ -21,13 +21,15 @@
         android:textColor="@color/light_primary_color" />
 
     <Spinner
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/spTaskType"
         android:entries="@array/taskTypes"
         android:layout_below="@+id/tvTaskTypeLabel"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="16dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -52,7 +54,9 @@
         android:layout_alignEnd="@+id/spTaskType"
         android:hint="@string/Task_details_hint"
         android:background="@color/primary_color"
-        android:textColorHint="@color/light_primary_color" />
+        android:textColorHint="@color/light_primary_color"
+        android:layout_marginBottom="16dp"
+        android:textColor="@color/text_on_primary_color" />
 
     <TextView
         android:layout_width="wrap_content"
