--- a/WhipperSnapper/app/src/main/res/layout/task_type_spinner_row.xml
+++ b/WhipperSnapper/app/src/main/res/layout/task_type_spinner_row.xml
@@ -3,19 +3,21 @@
     android:orientation="horizontal"
     android:padding="5dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/text_field_background">
 
     <ImageView
         android:id="@+id/ivTaskTypeIcon"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:layout_marginRight="4dp"
         android:layout_marginEnd="4dp"
-        android:src="@mipmap/ic_launcher"/>
+        android:src="@mipmap/ic_launcher" />
     <TextView
         android:id="@+id/tvTaskTypeText"
         android:layout_marginTop="4dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textSize="20dp" />
 
 </LinearLayout>
