--- a/WhipperSnapper/app/src/main/res/layout/activity_show_task_details.xml
+++ b/WhipperSnapper/app/src/main/res/layout/activity_show_task_details.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.al.whippersnapper.activities.ShowTaskDetailsActivity">
+    tools:context="com.al.whippersnapper.activities.ShowTaskDetailsActivity"
+    android:background="@color/primary_color">
 
     <ImageView
         android:layout_width="@dimen/profile_photo_on_signup_size"
@@ -54,7 +55,11 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:onClick="onOfferClick" />
+        android:onClick="onOfferClick"
+        android:textColor="@color/text_on_primary_color"
+        android:background="@color/accent_color"
+        android:layout_margin="@dimen/title_button_margin"
+        android:padding="@dimen/title_button_margin" />
 
     <TextView
         android:layout_width="wrap_content"
