--- a/WhipperSnapper/app/src/main/res/layout/activity_fill_out_profile.xml
+++ b/WhipperSnapper/app/src/main/res/layout/activity_fill_out_profile.xml
@@ -33,7 +33,8 @@
         android:inputType="textCapWords|textAutoCorrect"
         android:background="@color/text_field_background"
         android:layout_margin="4dp"
-        android:textColor="@color/text_field_foreground" />
+        android:textColor="@color/text_field_foreground"
+        android:padding="@dimen/small_button_margin" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -59,7 +60,8 @@
         android:textColor="@color/text_field_foreground"
         android:inputType="textCapWords|textAutoCorrect"
         android:background="@color/text_field_background"
-        android:layout_margin="4dp" />
+        android:layout_margin="4dp"
+        android:padding="@dimen/small_button_margin" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -74,7 +76,8 @@
         android:textColor="@color/text_field_foreground"
         android:inputType="textCapWords|textAutoCorrect"
         android:background="@color/text_field_background"
-        android:layout_margin="4dp" />
+        android:layout_margin="4dp"
+        android:padding="@dimen/small_button_margin" />
 
     <TextView
         android:layout_width="wrap_content"
