--- a/WhipperSnapper/app/src/main/res/layout/infowindow_task.xml
+++ b/WhipperSnapper/app/src/main/res/layout/infowindow_task.xml
@@ -6,17 +6,26 @@
     android:padding="16dp"
     android:background="@color/info_window_background">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/ivInfoTaskTypeIcon"
+        android:layout_gravity="center_horizontal"
+        android:background="#FFFFFF" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvInfoTaskType"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/text_on_primary_color" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvInfoSeniorName"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/text_on_primary_color" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -24,5 +33,6 @@
         android:id="@+id/tvInfoTaskDetails"
         android:layout_gravity="center_horizontal"
         android:ellipsize="end"
-        android:maxLines="2" />
+        android:maxLines="2"
+        android:textColor="@color/text_on_primary_color" />
 </LinearLayout>
